Fixed nav z-index glitch.

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -42,6 +42,10 @@ h1 {
 
 /* NAV */
 
+header {
+	z-index: 2;
+}
+
 .top-row {
 	display: inline-block;
 }
@@ -54,7 +58,6 @@ nav {
 	position: fixed;
 	top: 20px;
 	right: 20px;
-	z-index: 2;
 }
 
 .nav-icon {
@@ -63,10 +66,9 @@ nav {
 	/*padding-right: 10px;*/
 	width: 40px;
 	height: 40%;
-
 }
 .nav-icon i {
-	/*font-size: 100%;*/
+	font-size: 40px;
 	color: #fff;
 	/*margin: auto;*/
 	width: 40px;
